# tc-calculator

./: README.md  pyproject.toml
src/calculator/: Calculator.py  __main__.py
src/decorator/: logger.py
tests/: test_calculator.py
