[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tc-pyhton-calculator"
version = "0.1.0"
description = "A simple python calculator"
readme = "README.md"
authors = [{ name = "Willy DONGMO", email = "w.dongmo@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Turing college", "data science"]
dependencies = []
requires-python = ">=3.7"

    [project.optional-dependencies]
    build = ["build", "twine"]
    dev   = ["black","mypy", "unittest"]

    [project.scripts]
    realpython = "calculator.__main__:main"

    [project.urls]
    repository    = "https://github.com/wdongmo/tc-calculator"
   


[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

    [tool.bumpver.file_patterns]
    "pyproject.toml" = [
        'current_version = "{version}"',
        'version = "{version}"',
    ]
    "src/calculator/__init__.py" = ["{version}"]
    "src/calculator/__main__.py" = ["- tc-pyhton-calculator v{version}"]

[tool.isort]
profile                   = "black"
import_heading_stdlib     = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Reader imports"

[tool.mypy]
strict = true

    [[tool.mypy.overrides]]
    module                 = "calculator"
    ignore_missing_imports = true
